# workflow-engine

./: .gitignore  README.md  pyproject.toml  workflow_engine_design.md  workflow_engine_design_v2.md  workflow_engine_project_design.md
.agents/skills/hwe/: SKILL.md
.github/agents/: hwe-dev.agent.md
docs/: finance-news-collector-dogfood-run.md  hermes-bootstrap.md  hwe.config.example.yaml
ptemplate/: README.md
ptemplate/assistant/: human_action.md  project.md  prompt_template.md  workitem.md
ptemplate/coder/: fix-slice.md  implementation-slice.md
ptemplate/designer/: task-breakdown.md  technical-design.md  workitem-plan.md
ptemplate/operator/: recovery-plan.md
ptemplate/planner/: task-breakdown.md  workitem-plan.md
ptemplate/pm/: recovery-plan.md
ptemplate/qa/: regression-review.md  test-plan.md
ptemplate/researcher/: source-research.md
ptemplate/reviewer/: acceptance-review.md  implementation-review.md  planning-review.md  runtime-smoke.md
schema/: engine_schema.sql  engine_v2_schema.sql
src/hermes_workflow_engine/: __init__.py  ai.py  api.py  cli.py  config.py  context.py  doctor.py  project_runtime.py  project_storage.py  project_worker.py  runtime.py  spec.py  storage.py  v2_storage.py  validators.py  worker.py  workflow_templates.py
src/hermes_workflow_engine/workflow_templates/: publish-release.yaml  qa-review.yaml  (+1 more)
tests/: test_api.py  test_engine.py  test_project_storage.py  test_v2_storage.py
ui/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
ui/src/: App.tsx  api.ts  styles.css
(+27 files in other folders)
