[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hermes-workflow-engine"
version = "0.1.0"
description = "Local workflow engine for driving Hermes profile workers."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115",
  "httpx>=0.27",
  "psycopg2-binary>=2.9",
  "PyYAML>=6.0",
  "uvicorn[standard]>=0.30",
]

[project.scripts]
hwe = "hermes_workflow_engine.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
hermes_workflow_engine = ["workflow_templates/*.yaml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]